增加新的功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bcd.wanandroid">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--   android:theme="@style/AppTheme"-->
+
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:theme="@style/Theme.AppCompat.Light"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+
+        >
         <activity android:name=".ui.splash.SplashActivity"
             android:theme="@style/SplashTheme">
+
+        </activity>
+        <activity android:name=".ui.main.MainActivity">
+        </activity>
+        <activity android:name="com.bcd.wanandroid.easymvvm.databinding.databindingActivity">
+
+        </activity>
+        <activity android:name=".easymvvm.databinding.LiveDataActivity">
+
+        </activity>
+        <activity android:name=".easymvvm.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.MainActivity">
+        <activity android:name=".easymvvm.MvvmActivity">
+
         </activity>
     </application>
 
