--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bcd.wanandroid">
-<<<<<<< HEAD
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <!--   android:theme="@style/AppTheme"-->
-
-=======
     <uses-permission android:name="android.permission.INTERNET"/>
->>>>>>> f8ab10023e2288b20055fda11a1d47c33dcbdf01
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-<<<<<<< HEAD
         android:theme="@style/Theme.AppCompat.Light"
-=======
         android:networkSecurityConfig="@xml/network_security_config"
->>>>>>> f8ab10023e2288b20055fda11a1d47c33dcbdf01
         android:supportsRtl="true"
-
         >
         <activity android:name=".ui.splash.SplashActivity"
             android:theme="@style/SplashTheme">
@@ -41,9 +32,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".easymvvm.MvvmActivity">
+<!--        <activity android:name=".easymvvm.MvvmActivity">-->
 
-        </activity>
+<!--        </activity>-->
     </application>
 
 </manifest>
